--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<html><head><link rel="stylesheet" href="style.css"></head><body><nav><a href="index.html">Home</a><a href="about.html">About</a><a href="projects.html">Projects</a><a href="contact.html">Contact</a></nav><div class="container"><h1>Harshitha K</h1><p>Software Engineer based in Bengaluru, India</p></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Harshitha K | Portfolio</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="content">
+  <h1>Harshitha K</h1>
+  <div style="display:flex;align-items:center;gap:40px;flex-wrap:wrap;">
+    
+    <div style="max-width:450px;">
+      <p>Software Engineer based in Bengaluru, India.</p>
+      <p>Skilled in React, Python, and Firebase. Passionate about building real-world applications.</p>
+      <p>I have worked on:</p>
+      <ul>
+        <li>Fake News Detection</li>
+        <li>Attendance Tracking App</li>
+      </ul>
+    </div>
+
+    <img src="profile.jpg" style="width:220px;height:220px;border-radius:50%;object-fit:cover;border:3px solid #00eaff;" />
+  
+  </div>
+</div>
+
+</body>
+</html>
