--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Harshitha K | Portfolio</title>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <nav>
@@ -15,23 +12,26 @@
   <a href="contact.html">Contact</a>
 </nav>
 
-<div class="content">
-  <h1>Harshitha K</h1>
-  <div style="display:flex;align-items:center;gap:40px;flex-wrap:wrap;">
-    
+<div class="content" style="padding-top:40px;">
+
+  <div style="display:flex;align-items:center;justify-content:space-between;gap:60px;">
+
     <div style="max-width:450px;">
+      <h1 style="margin-bottom:10px;">Harshitha K</h1>
       <p>Software Engineer based in Bengaluru, India.</p>
       <p>Skilled in React, Python, and Firebase. Passionate about building real-world applications.</p>
-      <p>I have worked on:</p>
+      
+      <p>Worked on:</p>
       <ul>
-        <li>Fake News Detection</li>
-        <li>Attendance Tracking App</li>
+        <li>Fake News Detection Web App</li>
+        <li>Employee Attendance Tracking App</li>
       </ul>
     </div>
 
-    <img src="profile.jpg" style="width:220px;height:220px;border-radius:50%;object-fit:cover;border:3px solid #00eaff;" />
+    <img src="profile.jpg" style="width:220px;height:220px;border-radius:50%;object-fit:cover;border:3px solid #00eaff;">
   
   </div>
+
 </div>
 
 </body>
