--- a/about.html
+++ b/about.html
@@ -1,1 +1,47 @@
-<html><head><link rel="stylesheet" href="style.css"></head><body><nav><a href="index.html">Home</a><a href="about.html">About</a><a href="projects.html">Projects</a><a href="contact.html">Contact</a></nav><div class="container"><h2>About Me</h2><p>I’m a Software Engineer passionate about building clean, user-friendly, and impactful digital experiences. I enjoy working across both frontend and applied machine learning — especially when it helps solve real-world problems.</p></div></body></html>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="content">
+
+  <h2>About Me</h2>
+
+  <div style="display:flex; gap:60px; align-items:flex-start; margin-top:40px;">
+
+    <!-- LEFT COLUMN -->
+    <div style="flex:1;">
+      <p>Hello! I'm Harshitha K, a passionate Software Engineer based in Bengaluru, India. 
+      I love building meaningful digital products that solve real problems.</p>
+
+      <p>I enjoy working with modern web technologies and turning ideas into working software.
+      My main interests are Frontend development, Machine Learning concepts applied in real-world problems,
+      and building apps with clean UI & good user experience.</p>
+
+      <p>I aim to join a company where learning, innovation and problem solving is encouraged.</p>
+    </div>
+
+    <!-- RIGHT COLUMN -->
+    <div style="flex:0.6; background:rgba(255,255,255,0.08); padding:25px; border-radius:12px;">
+      <h3>Skills</h3>
+      <ul style="margin-top:10px;">
+        <li>ReactJS</li>
+        <li>Python</li>
+        <li>Firebase</li>
+        <li>HTML, CSS, JavaScript</li>
+        <li>Git & GitHub</li>
+      </ul>
+    </div>
+
+  </div>
+
+</div>
+</body>
+</html>
