--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,33 @@
-<html><head><link rel="stylesheet" href="style.css"></head><body><nav><a href="index.html">Home</a><a href="about.html">About</a><a href="projects.html">Projects</a><a href="contact.html">Contact</a></nav><div class="container"><h2>Projects</h2><h3>Fake News Detection</h3><p>GitHub: <a href="https://github.com/harshi12333/fake---news---classifier">Repository</a></p><h3>Attendance Tracking App</h3><p>GitHub: <a href="https://github.com/harshithar862/Attendance-tracking-app">Repository</a></p></div></body></html>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="content">
+  <h1>Projects</h1>
+
+  <div class="project-card">
+    <h2>Fake News Detection</h2>
+    <p>Machine learning model to classify news as real or fake using Python and scikit-learn.</p>
+    <a class="btn" href="https://github.com/harshi12333/fake---news---classifier" target="_blank">View Code</a>
+  </div>
+
+  <div class="project-card">
+    <h2>Attendance Tracking App</h2>
+    <p>Employee attendance system using real-time geolocation + Firebase integration.</p>
+    <a class="btn" href="https://github.com/harshithar862/Attendance-tracking-app" target="_blank">View Code</a>
+  </div>
+
+</div>
+
+</body>
+</html>
