--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
 <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
@@ -11,37 +13,26 @@
 </nav>
 
 <div class="content">
+  <h1>About Me</h1>
 
-  <h2>About Me</h2>
+  <p>Hi, I'm Harshitha K — a Software Engineer based in Bengaluru, India.</p>
 
-  <div style="display:flex; gap:60px; align-items:flex-start; margin-top:40px;">
+  <p>I enjoy building real-world applications that solve practical problems.  
+  I work mainly with <b>React, Python, and Firebase</b> and I love learning new tech every day.</p>
 
-    <!-- LEFT COLUMN -->
-    <div style="flex:1;">
-      <p>Hello! I'm Harshitha K, a passionate Software Engineer based in Bengaluru, India. 
-      I love building meaningful digital products that solve real problems.</p>
+  <p>I have experience working on:</p>
+  <ul>
+    <li>Machine Learning based Fake News Detection system</li>
+    <li>Employee Attendance Tracking App using geolocation</li>
+  </ul>
 
-      <p>I enjoy working with modern web technologies and turning ideas into working software.
-      My main interests are Frontend development, Machine Learning concepts applied in real-world problems,
-      and building apps with clean UI & good user experience.</p>
-
-      <p>I aim to join a company where learning, innovation and problem solving is encouraged.</p>
-    </div>
-
-    <!-- RIGHT COLUMN -->
-    <div style="flex:0.6; background:rgba(255,255,255,0.08); padding:25px; border-radius:12px;">
-      <h3>Skills</h3>
-      <ul style="margin-top:10px;">
-        <li>ReactJS</li>
-        <li>Python</li>
-        <li>Firebase</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>Git & GitHub</li>
-      </ul>
-    </div>
-
-  </div>
+  <p>Currently, I am exploring:
+    <br>• Full-stack development  
+    <br>• Real-time applications  
+    <br>• Cloud deployments
+  </p>
 
 </div>
+
 </body>
 </html>
