--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,29 @@
-<html><head><link rel="stylesheet" href="style.css"></head><body><nav><a href="index.html">Home</a><a href="about.html">About</a><a href="projects.html">Projects</a><a href="contact.html">Contact</a></nav><div class="container"><h2>Contact</h2><p>Email: harshithar862@gmail.com</p><p>LinkedIn: <a href="https://www.linkedin.com/in/kalavaharshitha/">linkedin.com/in/kalavaharshitha</a></p></div></body></html>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="content">
+  <h1>Contact</h1>
+
+  <p>If you'd like to get in touch with me — feel free to reach out!</p>
+
+  <p><b>Email:</b> harshithar862@gmail.com</p>
+  <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/harshitha-r-k">linkedin.com/in/harshitha-r-k</a></p>
+  <p><b>GitHub:</b> <a href="https://github.com/harshi12333">github.com/harshi12333</a></p>
+
+  <br><br>
+  <p>I'm always open to collaborating on interesting projects or opportunities.</p>
+</div>
+
+</body>
+</html>
