--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <p>If you'd like to get in touch with me — feel free to reach out!</p>
 
   <p><b>Email:</b> harshithar862@gmail.com</p>
-  <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/harshitha-r-k">linkedin.com/in/harshitha-r-k</a></p>
+  <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/kalavaharshitha/">linkedin.com/in/kalavaharshitha</a></p>
   <p><b>GitHub:</b> <a href="https://github.com/harshi12333">github.com/harshi12333</a></p>
 
   <br><br>
