--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,19 @@
   <p>If you'd like to get in touch with me — feel free to reach out!</p>
 
   <p><b>Email:</b> harshithar862@gmail.com</p>
-  <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/kalavaharshitha/">linkedin.com/in/kalavaharshitha</a></p>
-  <p><b>GitHub:</b> <a href="https://github.com/harshi12333">github.com/harshi12333</a></p>
+  <p><b>Phone:</b> +91 6281000309</p>
+
+  <p><b>LinkedIn:</b> 
+    <a href="https://www.linkedin.com/in/kalavaharshitha/" target="_blank">
+      linkedin.com/in/kalavaharshitha
+    </a>
+  </p>
+
+  <p><b>GitHub:</b> 
+    <a href="https://github.com/harshi12333" target="_blank">
+      github.com/harshi12333
+    </a>
+  </p>
 
   <br><br>
   <p>I'm always open to collaborating on interesting projects or opportunities.</p>
@@ -27,3 +38,4 @@
 
 </body>
 </html>
+
