--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,22 @@
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
+<style>
+.project-card {
+  border:1px solid #333;
+  padding:20px;
+  margin-bottom:25px;
+  border-radius:10px;
+  background:#0d1117;
+}
+.project-card h2 { margin-top:0; }
+.project-card a {
+  color:#00eaff;
+  text-decoration:none;
+  font-weight:bold;
+}
+</style>
 </head>
-
 <body>
 
 <nav>
@@ -17,14 +31,14 @@
 
   <div class="project-card">
     <h2>Fake News Detection</h2>
-    <p>Machine learning model to classify news as real or fake using Python and scikit-learn.</p>
-    <a class="btn" href="https://github.com/harshi12333/fake---news---classifier" target="_blank">View Code</a>
+    <p>Machine Learning model to classify news articles as real or fake using Python and scikit-learn.</p>
+    <a href="https://github.com/harshi12333/fake---news---classifier" target="_blank">View Repository →</a>
   </div>
 
   <div class="project-card">
     <h2>Attendance Tracking App</h2>
-    <p>Employee attendance system using real-time geolocation + Firebase integration.</p>
-    <a class="btn" href="https://github.com/harshithar862/Attendance-tracking-app" target="_blank">View Code</a>
+    <p>Geolocation based attendance system with manual check-in/out built using React + Firebase.</p>
+    <a href="https://github.com/harshithar862/Attendance-tracking-app" target="_blank">View Repository →</a>
   </div>
 
 </div>
