--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,12 @@
     </a>
   </p>
 
+  <p><b>Resume:</b> 
+     <a href="resume.pdf" class="btn" download>Download Resume</a>
+    </a>
+  </p>
+    
+
   <br><br>
   <p>I'm always open to collaborating on interesting projects or opportunities.</p>
 </div>
