--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="/portfolio-site/favicon.ico">
 <style>
 .project-card {
   border:1px solid #333;
